# Hackathon0Full

ai-employee-project/: .gitignore  ARCHITECTURE.md  BRONZE_COMPLETE.md  DOCUMENTATION.md  README.md  SILVER_COMPLETE.md  main.py  pyproject.toml  requirements.txt
ai-employee-project/.claude/skills/approve-action/: SKILL.md
ai-employee-project/.claude/skills/create-plan/: SKILL.md
ai-employee-project/.claude/skills/file-monitor/: SKILL.md
ai-employee-project/.claude/skills/gmail-monitor/: SKILL.md
ai-employee-project/.claude/skills/linkedin-monitor/: SKILL.md
ai-employee-project/.claude/skills/post-linkedin/: SKILL.md
ai-employee-project/.claude/skills/process-inbox/: SKILL.md
ai-employee-project/.claude/skills/reject-action/: SKILL.md
ai-employee-project/.claude/skills/send-email/: SKILL.md
ai-employee-project/.claude/skills/skill-creator/: SKILL.md
ai-employee-project/.specify/memory/: constitution.md
ai-employee-project/documents/: CODE_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  GMAIL_SETUP.md
ai-employee-project/helpers/: dashboard_updater.py  inbox_processor.py  linkedin_poster.py  plan_creator.py  status_updater.py  whatsapp_helper.py
ai-employee-project/mcp_servers/: email_server.py
ai-employee-project/scheduler/: check_approvals.py  scheduled_tasks.py
ai-employee-project/tests/: test_approval.py  test_email.py  test_linkedin.py  test_plan.py  test_scheduler.py  test_silver_integration.py  test_whatsapp.py
ai-employee-project/watchers/: base_watcher.py  file_watcher.py  gmail_watcher.py  linkedin_watcher.py  whatsapp_watcher.py
(+100 files in other folders)
